// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PayoutPreferencesPage matches snapshot with Stripe connected 1`] = `
<Page
  scrollingDisabled={false}
  title="PayoutPreferencesPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="PayoutPreferencesPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="PayoutPreferencesPage"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "ContactDetailsPage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.emailTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PasswordChangePage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.passwordTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PayoutPreferencesPage",
            },
            "selected": true,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.paymentsTabTitle"
              values={Object {}}
        />,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="PayoutPreferencesPage.heading"
            values={Object {}}
          />
        </h1>
        <p>
          Stripe connected: yes
        </p>
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <InjectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;

exports[`PayoutPreferencesPage matches snapshot with Stripe not connected 1`] = `
<Page
  scrollingDisabled={false}
  title="PayoutPreferencesPage.title"
>
  <LayoutSideNavigation
    className={null}
    containerClassName={null}
    rootClassName={null}
  >
    <LayoutWrapperTopbar
      className={null}
      rootClassName={null}
    >
      <withRouter(Connect(TopbarContainerComponent))
        currentPage="PayoutPreferencesPage"
      />
      <UserNav
        className={null}
        rootClassName={null}
        selectedPageName="PayoutPreferencesPage"
      />
    </LayoutWrapperTopbar>
    <LayoutWrapperSideNav
      className={null}
      rootClassName={null}
      tabs={
        Array [
          Object {
            "linkProps": Object {
              "name": "ContactDetailsPage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.emailTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PasswordChangePage",
            },
            "selected": false,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.passwordTabTitle"
              values={Object {}}
        />,
          },
          Object {
            "linkProps": Object {
              "name": "PayoutPreferencesPage",
            },
            "selected": true,
            "text": <FormattedMessage
              id="PayoutPreferencesPage.paymentsTabTitle"
              values={Object {}}
        />,
          },
        ]
      }
    />
    <LayoutWrapperMain
      className={null}
      rootClassName={null}
    >
      <div>
        <h1>
          <FormattedMessage
            id="PayoutPreferencesPage.heading"
            values={Object {}}
          />
        </h1>
        <p>
          Stripe connected: false
        </p>
      </div>
    </LayoutWrapperMain>
    <LayoutWrapperFooter
      className={null}
      rootClassName={null}
    >
      <InjectIntl(Footer) />
    </LayoutWrapperFooter>
  </LayoutSideNavigation>
</Page>
`;
